--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
 
   gtag('config', 'G-S0J1J9EQ4Y');
 </script>
-    <title>CarboLeon</title>
+    <title>CarboLeon - Wiedz Czym Oddychasz</title>
+    <meta name="description" content="CarboLeon to strona dzięki, której dowiesz sie o zanieczyszczeniu powietrza oraz pogodzie w twojej okolicy">
   </head>
   <body>
     <div id="root"></div>
