ulepszenie title i description

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
 
   gtag('config', 'G-S0J1J9EQ4Y');
 </script>
-    <title>CarboLeon - Wiedz Czym Oddychasz</title>
-    <meta name="description" content="CarboLeon to strona dzięki, której dowiesz sie o zanieczyszczeniu powietrza oraz pogodzie w twojej okolicy">
+    <title>Carboleon - Sprawdź jakość powietrza, pogodę oraz ciekawe miejsca w twojej okolicy</title>
+    <meta name="description" content="CarboLeon to strona dzięki, której dowiesz sie o zanieczyszczeniu powietrza, pogodzie oraz ciekawych miejsc w twojej okolicy. Wszystko stworzone z myślą o TOBIE !">
   </head>
   <body>
     <div id="root"></div>
