--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="CarboLeon service" />
+    <meta name="keywords" content="Zanieczyszczenie, Zanieczyszczenie powietrza, Powietrze, Balls, Zanieczyszczenie, Pogoda"/>
     <link rel="apple-touch-icon" href="logo.png" />
     <link rel="manifest" href="manifest.json" />
     <script
