--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,16 @@
 
       gtag("config", "G-S0J1J9EQ4Y");
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S0J1J9EQ4Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S0J1J9EQ4Y');
+</script>
+
     <title>Carboleon</title>
     <meta
       name="description"
