--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
 
   gtag('config', 'G-S0J1J9EQ4Y');
 </script>
+<!-- Event snippet for Website traffic (2) conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-11115590529/iPZGCK7m8ZEYEIHnqbQp'});
+</script>
 
     <title>Carboleon</title>
     <meta
